# obsi

./: .gitignore  20260128 讨论整理.md  20260214-进一步思路.md  OS 模块执行流保护设计.md  工作记录.md  我的文库.json
hopter/: aarch64-panic-recovery-design.md  hopter-softlock-analysis.md  hopter-toolchain-implementation.md  hopter-unwind-analysis.md  llvm-plugin-implementation.md  soft-lock-fixed-functions.md  summary.md  工作计划.md
hopter/aarch64-baremetal-unwind/: Cargo.toml  README.md  UNWIND_FLOW_EXPLAINED.md  build_output.txt  memory.x  note.md  run_qemu.sh
hopter/aarch64-baremetal-unwind/.cargo/: config.toml
hopter/aarch64-baremetal-unwind/src/: main.rs  main_simple.rs  main_with_unwinding.rs
hopter/aarch64-split-stack-plugin/: CMakeLists.txt  README.md  README.zh.md  build.sh  run.sh
hopter/aarch64-split-stack-plugin/demo/: correctness_test.c  demo.c  overflow_demo.c
hopter/aarch64-split-stack-plugin/pass/: SplitStackPass.cpp
hopter/aarch64-split-stack-plugin/runtime/: runtime.c  runtime_aarch64.S
hopter/softlock-std-demo/: Cargo.toml  README.md  SOFTLOCK_BENCH_REPORT.md
hopter/softlock-std-demo/src/: main.rs
文献笔记/:  文章简介.md  @maHopterSafeRobust2025.md
